src/sass/converted/patternfly/_blank-slate.scss
//
// Blank Slate
// --------------------------------------------------

.blank-slate-pf {
  @media (min-width: $screen-sm-min) {
    padding: ($jumbotron-padding * 2) ($jumbotron-padding * 2);
  }
  @media (min-width: $screen-md-min) {
    padding: ($jumbotron-padding * 3) ($jumbotron-padding * 4);
  }
  background-color: $well-bg;
  border: 1px solid $well-border;
  border-radius: $border-radius-base;
  margin-bottom: 20px;
  padding: $jumbotron-padding;
  text-align: center;
  .blank-slate-pf-icon {
    color: $gray-light;
    font-size: ($font-size-h1 * 2.4);
    line-height: ($font-size-h1 * 2.4);
  }
  .blank-slate-pf-main-action {
    margin-top: $line-height-computed;
  }
  .blank-slate-pf-secondary-action {
    margin-top: $line-height-computed;
  }
  button {
    margin-right: 5px;
    &:last-of-type {
      margin-right: 0;
    }
  }
}

